fix too small cost current rate input in project settings

--- a/app/assets/stylesheets/costs/settings.sass
+++ b/app/assets/stylesheets/costs/settings.sass
@@ -18,6 +18,6 @@
  *
  */
 
-@import costs/costs_legacy
-@import costs/summarized_cost_entries
-@import costs/settings
+table.list.members
+  .form--text-field.-tiny
+    min-width: 60px
